
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_19__ TYPE_5__ ;
typedef struct TYPE_18__ TYPE_4__ ;
typedef struct TYPE_17__ TYPE_3__ ;
typedef struct TYPE_16__ TYPE_2__ ;
typedef struct TYPE_15__ TYPE_1__ ;
typedef struct TYPE_14__ TYPE_11__ ;


typedef size_t ULONG ;
struct TYPE_19__ {int * Buffer; int MaximumLength; int Length; } ;
struct TYPE_18__ {size_t Entries; TYPE_1__* SidInfo; } ;
struct TYPE_17__ {scalar_t__ Use; size_t DomainIndex; TYPE_5__ Name; scalar_t__ Flags; } ;
struct TYPE_14__ {int MaximumLength; int Buffer; int Length; } ;
struct TYPE_16__ {scalar_t__ Use; int Sid; TYPE_11__ AccountName; int DomainName; } ;
struct TYPE_15__ {int Sid; } ;
typedef TYPE_2__* PWELL_KNOWN_SID ;
typedef int * PULONG ;
typedef TYPE_3__* PLSAPR_TRANSLATED_NAME_EX ;
typedef TYPE_4__* PLSAPR_SID_ENUM_BUFFER ;
typedef int PLSAPR_REFERENCED_DOMAIN_LIST ;
typedef int NTSTATUS ;
typedef TYPE_5__* LPWSTR ;


 int ConvertSidToStringSidW (int ,TYPE_5__**) ;
 int LocalFree (TYPE_5__*) ;
 int LsapAddDomainToDomainsList (int ,TYPE_11__*,int ,size_t*) ;
 TYPE_2__* LsapLookupIsolatedWellKnownName (int *) ;
 TYPE_2__* LsapLookupWellKnownSid (int ) ;
 int * MIDL_user_allocate (int ) ;
 int NT_SUCCESS (int ) ;
 int RtlCopyMemory (int *,int ,int ) ;
 int STATUS_INSUFFICIENT_RESOURCES ;
 int STATUS_SUCCESS ;
 scalar_t__ SidTypeUnknown ;
 int TRACE (char*,TYPE_5__*) ;

__attribute__((used)) static NTSTATUS
LsapLookupWellKnownSids(PLSAPR_SID_ENUM_BUFFER SidEnumBuffer,
                        PLSAPR_TRANSLATED_NAME_EX NamesBuffer,
                        PLSAPR_REFERENCED_DOMAIN_LIST DomainsBuffer,
                        PULONG Mapped)
{
    PWELL_KNOWN_SID ptr, ptr2;
    LPWSTR SidString = ((void*)0);
    ULONG DomainIndex;
    ULONG i;
    NTSTATUS Status = STATUS_SUCCESS;

    for (i = 0; i < SidEnumBuffer->Entries; i++)
    {

        if (NamesBuffer[i].Use != SidTypeUnknown)
            continue;

        ConvertSidToStringSidW(SidEnumBuffer->SidInfo[i].Sid, &SidString);
        TRACE("Mapping SID: %S\n", SidString);
        LocalFree(SidString);
        SidString = ((void*)0);

        ptr = LsapLookupWellKnownSid(SidEnumBuffer->SidInfo[i].Sid);
        if (ptr != ((void*)0))
        {
            NamesBuffer[i].Use = ptr->Use;
            NamesBuffer[i].Flags = 0;

            NamesBuffer[i].Name.Length = ptr->AccountName.Length;
            NamesBuffer[i].Name.MaximumLength = ptr->AccountName.MaximumLength;
            NamesBuffer[i].Name.Buffer = MIDL_user_allocate(ptr->AccountName.MaximumLength);
            if (NamesBuffer[i].Name.Buffer == ((void*)0))
            {
                Status = STATUS_INSUFFICIENT_RESOURCES;
                goto done;
            }

            RtlCopyMemory(NamesBuffer[i].Name.Buffer, ptr->AccountName.Buffer, ptr->AccountName.MaximumLength);

            ptr2= LsapLookupIsolatedWellKnownName(&ptr->DomainName);
            if (ptr2 != ((void*)0))
            {
                Status = LsapAddDomainToDomainsList(DomainsBuffer,
                                                    &ptr2->AccountName,
                                                    ptr2->Sid,
                                                    &DomainIndex);
                if (!NT_SUCCESS(Status))
                    goto done;

                NamesBuffer[i].DomainIndex = DomainIndex;
            }

            TRACE("Mapped to: %wZ\n", &NamesBuffer[i].Name);

            (*Mapped)++;
        }
    }

done:
    return Status;
}
